[package]
name = "reverse_string"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "reverse_string"
path = "src/main.rs"



# Ignorar binários gerados
/target/
**/*.rs.bk

# Ignorar arquivos de configuração do IDE/editor
**/.idea/
**/.vscode/
*.swp
*.swo

# Ignorar arquivos específicos do sistema operacional
.DS_Store
Thumbs.db

# Ignorar arquivos de logs
*.log
